--- a/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
+++ b/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
@@ -59,6 +59,12 @@
       <DependentUpon>alta_empresas.cs</DependentUpon>
     </Compile>
     <Compile Include="Class1.cs" />
+    <Compile Include="Consulta-Viviendas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Consulta-Viviendas.Designer.cs">
+      <DependentUpon>Consulta-Viviendas.cs</DependentUpon>
+    </Compile>
     <Compile Include="consultas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="alta_empresas.resx">
       <DependentUpon>alta_empresas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Consulta-Viviendas.resx">
+      <DependentUpon>Consulta-Viviendas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="consultas.resx">
       <DependentUpon>consultas.cs</DependentUpon>
