--- a/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
+++ b/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
@@ -71,11 +71,11 @@
     <Compile Include="consultas.Designer.cs">
       <DependentUpon>consultas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="Consulta-Promociones.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Consulta-Promociones.Designer.cs">
+      <DependentUpon>Consulta-Promociones.cs</DependentUpon>
     </Compile>
     <Compile Include="Form_consulta1.cs">
       <SubType>Form</SubType>
@@ -115,8 +115,8 @@
     <EmbeddedResource Include="consultas.resx">
       <DependentUpon>consultas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="Consulta-Promociones.resx">
+      <DependentUpon>Consulta-Promociones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form_consulta1.resx">
       <DependentUpon>Form_consulta1.cs</DependentUpon>
