--- a/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
+++ b/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
@@ -156,5 +156,8 @@
   <ItemGroup>
     <None Include="Resources\2019-11-14_1821.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\consultainmobi.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
