imagen para consulta 3

--- a/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
+++ b/TP2-Inmobiliaria-grupo-4/TP2-Inmobiliaria-grupo-4.csproj
@@ -171,5 +171,8 @@
   <ItemGroup>
     <None Include="Resources\terraza.jfif" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\promociones-inmobiliarias.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
